[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/space/ufoBlue.png" type="Texture" id=1]
[ext_resource path="res://scripts1/Base/Base_1.gd" type="Script" id=2]
[ext_resource path="res://assets/misc/health_bar_red.png" type="Texture" id=3]
[ext_resource path="res://assets/misc/health_bar_green.png" type="Texture" id=4]
[ext_resource path="res://scenes/Base/Baase_Area2D.gd" type="Script" id=5]
[ext_resource path="res://assets/sfx/sfx_lose.ogg" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 80.0

[node name="BaseHuman" type="StaticBody2D" groups=["bases", "bases_human"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0588235, 0.909804, 0.231373, 1 )
texture = ExtResource( 1 )
centered = false

[node name="Position2D" type="Position2D" parent="."]

[node name="Base_Human" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 15
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base_Human"]
visible = false
position = Vector2( 46, 45.5 )
shape = SubResource( 1 )

[node name="Resource" type="Label" parent="."]
margin_left = 1.0
margin_top = -16.0
margin_right = 92.0
margin_bottom = -2.0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource2" type="Label" parent="."]
margin_left = -1.0
margin_top = 114.0
margin_right = 90.0
margin_bottom = 128.0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_bar" type="TextureProgress" parent="."]
margin_left = -5.0
margin_top = 100.0
margin_right = 95.0
margin_bottom = 105.0
max_value = 1000.0
value = 1000.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Capture_bar" type="TextureProgress" parent="."]
visible = false
margin_left = -5.0
margin_top = -28.0
margin_right = 95.0
margin_bottom = -23.0
max_value = 10.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="CaptureTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="DieTimer" type="Timer" parent="."]

[node name="Play" type="Node" parent="."]

[node name="Play2" type="AudioStreamPlayer2D" parent="Play"]
stream = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.882353, 0.0588235, 0.909804, 1 )
texture = ExtResource( 1 )
centered = false

[connection signal="area_entered" from="Base_Human" to="." method="_on_Base_Human_area_entered"]
[connection signal="area_exited" from="Base_Human" to="." method="_on_Base_Human_area_exited"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_CaptureTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
